tests/snapshots/generator__advanced_create_files@_exact_1000_1_100.snap
---
source: tests/generator.rs
expression: "&golden"
---
Exactly 1,000 files will be generated in approximately 10 directories distributed across a tree of maximum depth 1 where each directory contains approximately 10 other directories.
Created 1,000 files across 11 directories.

/0
/0.dir
/1
/1.dir
/10
/10.dir
/11
/12
/13
/14
/15
/16
/17
/18
/19
/2
/2.dir
/20
/21
/22
/23
/24
/25
/26
/27
/28
/29
/3
/3.dir
/30
/31
/32
/33
/34
/35
/36
/37
/38
/39
/4
/4.dir
/40
/41
/42
/43
/44
/45
/46
/47
/48
/49
/5
/5.dir
/50
/51
/52
/53
/54
/55
/56
/57
/58
/59
/6
/6.dir
/60
/61
/62
/63
/64
/65
/66
/67
/68
/69
/7
/7.dir
/70
/71
/72
/73
/74
/75
/76
/77
/78
/79
/8
/8.dir
/80
/81
/82
/83
/84
/85
/9
/9.dir
/0.dir/0
/0.dir/1
/0.dir/10
/0.dir/11
/0.dir/12
/0.dir/13
/0.dir/14
/0.dir/15
/0.dir/16
/0.dir/17
/0.dir/18
/0.dir/19
/0.dir/2
/0.dir/20
/0.dir/21
/0.dir/22
/0.dir/23
/0.dir/24
/0.dir/25
/0.dir/26
/0.dir/27
/0.dir/28
/0.dir/29
/0.dir/3
/0.dir/30
/0.dir/31
/0.dir/32
/0.dir/33
/0.dir/34
/0.dir/35
/0.dir/36
/0.dir/37
/0.dir/38
/0.dir/39
/0.dir/4
/0.dir/40
/0.dir/41
/0.dir/42
/0.dir/43
/0.dir/44
/0.dir/45
/0.dir/46
/0.dir/47
/0.dir/48
/0.dir/49
/0.dir/5
/0.dir/6
/0.dir/7
/0.dir/8
/0.dir/9
/1.dir/0
/1.dir/1
/1.dir/10
/1.dir/11
/1.dir/12
/1.dir/13
/1.dir/14
/1.dir/15
/1.dir/16
/1.dir/17
/1.dir/18
/1.dir/19
/1.dir/2
/1.dir/20
/1.dir/21
/1.dir/22
/1.dir/23
/1.dir/24
/1.dir/25
/1.dir/26
/1.dir/27
/1.dir/28
/1.dir/29
/1.dir/3
/1.dir/30
/1.dir/31
/1.dir/32
/1.dir/33
/1.dir/34
/1.dir/35
/1.dir/36
/1.dir/37
/1.dir/38
/1.dir/39
/1.dir/4
/1.dir/40
/1.dir/41
/1.dir/42
/1.dir/43
/1.dir/44
/1.dir/45
/1.dir/46
/1.dir/47
/1.dir/48
/1.dir/49
/1.dir/5
/1.dir/50
/1.dir/51
/1.dir/52
/1.dir/53
/1.dir/54
/1.dir/55
/1.dir/56
/1.dir/57
/1.dir/58
/1.dir/59
/1.dir/6
/1.dir/60
/1.dir/61
/1.dir/62
/1.dir/63
/1.dir/64
/1.dir/65
/1.dir/66
/1.dir/67
/1.dir/68
/1.dir/69
/1.dir/7
/1.dir/70
/1.dir/71
/1.dir/72
/1.dir/73
/1.dir/74
/1.dir/75
/1.dir/76
/1.dir/77
/1.dir/78
/1.dir/79
/1.dir/8
/1.dir/80
/1.dir/81
/1.dir/82
/1.dir/83
/1.dir/84
/1.dir/85
/1.dir/86
/1.dir/87
/1.dir/88
/1.dir/89
/1.dir/9
/1.dir/90
/1.dir/91
/1.dir/92
/1.dir/93
/1.dir/94
/1.dir/95
/1.dir/96
/1.dir/97
/10.dir/0
/10.dir/1
/10.dir/10
/10.dir/11
/10.dir/12
/10.dir/13
/10.dir/14
/10.dir/15
/10.dir/16
/10.dir/17
/10.dir/18
/10.dir/19
/10.dir/2
/10.dir/20
/10.dir/21
/10.dir/22
/10.dir/23
/10.dir/24
/10.dir/25
/10.dir/26
/10.dir/27
/10.dir/28
/10.dir/29
/10.dir/3
/10.dir/30
/10.dir/31
/10.dir/32
/10.dir/33
/10.dir/34
/10.dir/35
/10.dir/36
/10.dir/37
/10.dir/38
/10.dir/39
/10.dir/4
/10.dir/40
/10.dir/41
/10.dir/42
/10.dir/43
/10.dir/44
/10.dir/45
/10.dir/5
/10.dir/6
/10.dir/7
/10.dir/8
/10.dir/9
/2.dir/0
/2.dir/1
/2.dir/10
/2.dir/100
/2.dir/101
/2.dir/102
/2.dir/103
/2.dir/104
/2.dir/105
/2.dir/106
/2.dir/107
/2.dir/108
/2.dir/109
/2.dir/11
/2.dir/110
/2.dir/111
/2.dir/112
/2.dir/113
/2.dir/114
/2.dir/12
/2.dir/13
/2.dir/14
/2.dir/15
/2.dir/16
/2.dir/17
/2.dir/18
/2.dir/19
/2.dir/2
/2.dir/20
/2.dir/21
/2.dir/22
/2.dir/23
/2.dir/24
/2.dir/25
/2.dir/26
/2.dir/27
/2.dir/28
/2.dir/29
/2.dir/3
/2.dir/30
/2.dir/31
/2.dir/32
/2.dir/33
/2.dir/34
/2.dir/35
/2.dir/36
/2.dir/37
/2.dir/38
/2.dir/39
/2.dir/4
/2.dir/40
/2.dir/41
/2.dir/42
/2.dir/43
/2.dir/44
/2.dir/45
/2.dir/46
/2.dir/47
/2.dir/48
/2.dir/49
/2.dir/5
/2.dir/50
/2.dir/51
/2.dir/52
/2.dir/53
/2.dir/54
/2.dir/55
/2.dir/56
/2.dir/57
/2.dir/58
/2.dir/59
/2.dir/6
/2.dir/60
/2.dir/61
/2.dir/62
/2.dir/63
/2.dir/64
/2.dir/65
/2.dir/66
/2.dir/67
/2.dir/68
/2.dir/69
/2.dir/7
/2.dir/70
/2.dir/71
/2.dir/72
/2.dir/73
/2.dir/74
/2.dir/75
/2.dir/76
/2.dir/77
/2.dir/78
/2.dir/79
/2.dir/8
/2.dir/80
/2.dir/81
/2.dir/82
/2.dir/83
/2.dir/84
/2.dir/85
/2.dir/86
/2.dir/87
/2.dir/88
/2.dir/89
/2.dir/9
/2.dir/90
/2.dir/91
/2.dir/92
/2.dir/93
/2.dir/94
/2.dir/95
/2.dir/96
/2.dir/97
/2.dir/98
/2.dir/99
/3.dir/0
/3.dir/1
/3.dir/10
/3.dir/11
/3.dir/12
/3.dir/13
/3.dir/14
/3.dir/15
/3.dir/16
/3.dir/17
/3.dir/18
/3.dir/19
/3.dir/2
/3.dir/20
/3.dir/21
/3.dir/22
/3.dir/23
/3.dir/24
/3.dir/25
/3.dir/26
/3.dir/27
/3.dir/28
/3.dir/29
/3.dir/3
/3.dir/30
/3.dir/31
/3.dir/32
/3.dir/33
/3.dir/34
/3.dir/35
/3.dir/36
/3.dir/37
/3.dir/38
/3.dir/39
/3.dir/4
/3.dir/40
/3.dir/41
/3.dir/42
/3.dir/43
/3.dir/44
/3.dir/45
/3.dir/46
/3.dir/47
/3.dir/48
/3.dir/49
/3.dir/5
/3.dir/50
/3.dir/51
/3.dir/52
/3.dir/53
/3.dir/54
/3.dir/55
/3.dir/56
/3.dir/57
/3.dir/58
/3.dir/59
/3.dir/6
/3.dir/60
/3.dir/61
/3.dir/62
/3.dir/63
/3.dir/64
/3.dir/65
/3.dir/66
/3.dir/67
/3.dir/68
/3.dir/69
/3.dir/7
/3.dir/70
/3.dir/71
/3.dir/72
/3.dir/73
/3.dir/74
/3.dir/75
/3.dir/76
/3.dir/77
/3.dir/78
/3.dir/79
/3.dir/8
/3.dir/80
/3.dir/81
/3.dir/82
/3.dir/83
/3.dir/84
/3.dir/85
/3.dir/86
/3.dir/87
/3.dir/88
/3.dir/89
/3.dir/9
/3.dir/90
/3.dir/91
/3.dir/92
/3.dir/93
/3.dir/94
/3.dir/95
/3.dir/96
/4.dir/0
/4.dir/1
/4.dir/10
/4.dir/100
/4.dir/101
/4.dir/102
/4.dir/103
/4.dir/104
/4.dir/105
/4.dir/106
/4.dir/107
/4.dir/11
/4.dir/12
/4.dir/13
/4.dir/14
/4.dir/15
/4.dir/16
/4.dir/17
/4.dir/18
/4.dir/19
/4.dir/2
/4.dir/20
/4.dir/21
/4.dir/22
/4.dir/23
/4.dir/24
/4.dir/25
/4.dir/26
/4.dir/27
/4.dir/28
/4.dir/29
/4.dir/3
/4.dir/30
/4.dir/31
/4.dir/32
/4.dir/33
/4.dir/34
/4.dir/35
/4.dir/36
/4.dir/37
/4.dir/38
/4.dir/39
/4.dir/4
/4.dir/40
/4.dir/41
/4.dir/42
/4.dir/43
/4.dir/44
/4.dir/45
/4.dir/46
/4.dir/47
/4.dir/48
/4.dir/49
/4.dir/5
/4.dir/50
/4.dir/51
/4.dir/52
/4.dir/53
/4.dir/54
/4.dir/55
/4.dir/56
/4.dir/57
/4.dir/58
/4.dir/59
/4.dir/6
/4.dir/60
/4.dir/61
/4.dir/62
/4.dir/63
/4.dir/64
/4.dir/65
/4.dir/66
/4.dir/67
/4.dir/68
/4.dir/69
/4.dir/7
/4.dir/70
/4.dir/71
/4.dir/72
/4.dir/73
/4.dir/74
/4.dir/75
/4.dir/76
/4.dir/77
/4.dir/78
/4.dir/79
/4.dir/8
/4.dir/80
/4.dir/81
/4.dir/82
/4.dir/83
/4.dir/84
/4.dir/85
/4.dir/86
/4.dir/87
/4.dir/88
/4.dir/89
/4.dir/9
/4.dir/90
/4.dir/91
/4.dir/92
/4.dir/93
/4.dir/94
/4.dir/95
/4.dir/96
/4.dir/97
/4.dir/98
/4.dir/99
/5.dir/0
/5.dir/1
/5.dir/10
/5.dir/11
/5.dir/12
/5.dir/13
/5.dir/14
/5.dir/15
/5.dir/16
/5.dir/17
/5.dir/18
/5.dir/19
/5.dir/2
/5.dir/20
/5.dir/21
/5.dir/22
/5.dir/23
/5.dir/24
/5.dir/25
/5.dir/26
/5.dir/27
/5.dir/28
/5.dir/29
/5.dir/3
/5.dir/30
/5.dir/31
/5.dir/32
/5.dir/33
/5.dir/34
/5.dir/35
/5.dir/36
/5.dir/37
/5.dir/38
/5.dir/39
/5.dir/4
/5.dir/40
/5.dir/41
/5.dir/42
/5.dir/43
/5.dir/44
/5.dir/45
/5.dir/46
/5.dir/47
/5.dir/48
/5.dir/49
/5.dir/5
/5.dir/50
/5.dir/51
/5.dir/52
/5.dir/53
/5.dir/54
/5.dir/55
/5.dir/56
/5.dir/57
/5.dir/58
/5.dir/59
/5.dir/6
/5.dir/60
/5.dir/61
/5.dir/62
/5.dir/63
/5.dir/64
/5.dir/65
/5.dir/66
/5.dir/67
/5.dir/68
/5.dir/69
/5.dir/7
/5.dir/70
/5.dir/71
/5.dir/72
/5.dir/73
/5.dir/74
/5.dir/75
/5.dir/76
/5.dir/77
/5.dir/78
/5.dir/79
/5.dir/8
/5.dir/80
/5.dir/81
/5.dir/82
/5.dir/9
/6.dir/0
/6.dir/1
/6.dir/10
/6.dir/11
/6.dir/12
/6.dir/13
/6.dir/14
/6.dir/15
/6.dir/16
/6.dir/17
/6.dir/18
/6.dir/19
/6.dir/2
/6.dir/20
/6.dir/21
/6.dir/22
/6.dir/23
/6.dir/24
/6.dir/25
/6.dir/26
/6.dir/27
/6.dir/28
/6.dir/29
/6.dir/3
/6.dir/30
/6.dir/31
/6.dir/32
/6.dir/33
/6.dir/34
/6.dir/35
/6.dir/36
/6.dir/37
/6.dir/38
/6.dir/39
/6.dir/4
/6.dir/40
/6.dir/41
/6.dir/42
/6.dir/43
/6.dir/44
/6.dir/45
/6.dir/46
/6.dir/47
/6.dir/48
/6.dir/49
/6.dir/5
/6.dir/50
/6.dir/51
/6.dir/52
/6.dir/53
/6.dir/54
/6.dir/55
/6.dir/56
/6.dir/57
/6.dir/58
/6.dir/59
/6.dir/6
/6.dir/60
/6.dir/61
/6.dir/62
/6.dir/63
/6.dir/64
/6.dir/65
/6.dir/66
/6.dir/67
/6.dir/68
/6.dir/69
/6.dir/7
/6.dir/8
/6.dir/9
/7.dir/0
/7.dir/1
/7.dir/10
/7.dir/11
/7.dir/12
/7.dir/13
/7.dir/14
/7.dir/15
/7.dir/16
/7.dir/17
/7.dir/18
/7.dir/19
/7.dir/2
/7.dir/20
/7.dir/21
/7.dir/22
/7.dir/23
/7.dir/24
/7.dir/25
/7.dir/26
/7.dir/27
/7.dir/28
/7.dir/29
/7.dir/3
/7.dir/30
/7.dir/31
/7.dir/32
/7.dir/33
/7.dir/34
/7.dir/35
/7.dir/36
/7.dir/37
/7.dir/38
/7.dir/39
/7.dir/4
/7.dir/40
/7.dir/41
/7.dir/42
/7.dir/43
/7.dir/44
/7.dir/45
/7.dir/46
/7.dir/47
/7.dir/48
/7.dir/49
/7.dir/5
/7.dir/50
/7.dir/51
/7.dir/52
/7.dir/53
/7.dir/54
/7.dir/55
/7.dir/56
/7.dir/57
/7.dir/58
/7.dir/59
/7.dir/6
/7.dir/60
/7.dir/61
/7.dir/62
/7.dir/63
/7.dir/64
/7.dir/65
/7.dir/66
/7.dir/67
/7.dir/68
/7.dir/69
/7.dir/7
/7.dir/70
/7.dir/71
/7.dir/72
/7.dir/73
/7.dir/74
/7.dir/75
/7.dir/76
/7.dir/77
/7.dir/78
/7.dir/79
/7.dir/8
/7.dir/80
/7.dir/81
/7.dir/82
/7.dir/83
/7.dir/84
/7.dir/85
/7.dir/86
/7.dir/87
/7.dir/88
/7.dir/89
/7.dir/9
/7.dir/90
/7.dir/91
/7.dir/92
/7.dir/93
/7.dir/94
/8.dir/0
/8.dir/1
/8.dir/10
/8.dir/11
/8.dir/12
/8.dir/13
/8.dir/14
/8.dir/15
/8.dir/16
/8.dir/17
/8.dir/18
/8.dir/19
/8.dir/2
/8.dir/20
/8.dir/21
/8.dir/22
/8.dir/23
/8.dir/24
/8.dir/25
/8.dir/26
/8.dir/27
/8.dir/28
/8.dir/29
/8.dir/3
/8.dir/30
/8.dir/31
/8.dir/32
/8.dir/33
/8.dir/34
/8.dir/35
/8.dir/36
/8.dir/37
/8.dir/38
/8.dir/39
/8.dir/4
/8.dir/40
/8.dir/41
/8.dir/42
/8.dir/43
/8.dir/44
/8.dir/45
/8.dir/46
/8.dir/47
/8.dir/48
/8.dir/49
/8.dir/5
/8.dir/50
/8.dir/51
/8.dir/52
/8.dir/53
/8.dir/54
/8.dir/55
/8.dir/56
/8.dir/57
/8.dir/6
/8.dir/7
/8.dir/8
/8.dir/9
/9.dir/0
/9.dir/1
/9.dir/10
/9.dir/11
/9.dir/12
/9.dir/13
/9.dir/14
/9.dir/15
/9.dir/16
/9.dir/17
/9.dir/18
/9.dir/19
/9.dir/2
/9.dir/20
/9.dir/21
/9.dir/22
/9.dir/23
/9.dir/24
/9.dir/25
/9.dir/26
/9.dir/27
/9.dir/28
/9.dir/29
/9.dir/3
/9.dir/30
/9.dir/31
/9.dir/32
/9.dir/33
/9.dir/34
/9.dir/35
/9.dir/36
/9.dir/37
/9.dir/38
/9.dir/39
/9.dir/4
/9.dir/40
/9.dir/41
/9.dir/42
/9.dir/43
/9.dir/44
/9.dir/45
/9.dir/46
/9.dir/47
/9.dir/48
/9.dir/49
/9.dir/5
/9.dir/50
/9.dir/51
/9.dir/52
/9.dir/53
/9.dir/54
/9.dir/55
/9.dir/56
/9.dir/57
/9.dir/58
/9.dir/59
/9.dir/6
/9.dir/60
/9.dir/61
/9.dir/62
/9.dir/63
/9.dir/64
/9.dir/65
/9.dir/66
/9.dir/67
/9.dir/68
/9.dir/69
/9.dir/7
/9.dir/70
/9.dir/71
/9.dir/72
/9.dir/73
/9.dir/74
/9.dir/75
/9.dir/76
/9.dir/77
/9.dir/78
/9.dir/79
/9.dir/8
/9.dir/80
/9.dir/81
/9.dir/82
/9.dir/83
/9.dir/84
/9.dir/85
/9.dir/86
/9.dir/87
/9.dir/88
/9.dir/89
/9.dir/9
/9.dir/90
/9.dir/91
/9.dir/92
/9.dir/93

0x313c7a3b2ba813ee
