tests/snapshots/generator__advanced_create_files@_exact_1_10_1.snap
---
source: tests/generator.rs
expression: "&golden"
---
Exactly 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 10 where each directory contains approximately 1 other directory.
Created 1 file across 0 directories.

/0

0x49bc192c478bfc2e
